[package]
edition = "2018"
name = "stew"
version = "0.2.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Stew is a set of image transformation tools, adapted from `sic`."
license = "MIT"
repository = "https://github.com/foresterre/stew"
readme = "README.md"
exclude = [
    ".idea/*",
    ".vscode/*",
    "*.iml",
]
keywords = ["image", "converter", "cli", "front-end", "image-cli"]
categories = ["multimedia::images", "command-line-utilities"]

[features]
output-test-images = []

[dependencies]
arrayvec = "0.4.7"
clap = "2.32.0"
image = "0.21.0"

[lib]
name = "stew_lib"
path = "src/lib.rs"

[profile.release]
panic = "abort"